Day 09 - Authentication finish - forget password, reset, logout
